Smarter Fix: One liner to make menu on mobile fit on smaller screens.

--- a/style.css
+++ b/style.css
@@ -131,12 +131,12 @@ div.about{
 	div#menu {
 		position: fixed;
 		width:100%;
-        box-sizing: border-box;
 		font-size: 16px;
 		line-height: 22px;
 		padding: 10px;
 		z-index:10;
 		left: 2px;
+        right: 2px;
 		top: 2px;
 	}
 	img#logo{
